src/App.css
:root {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    /* background-color: #2e3035; */
}

body {
    margin: 0;
    padding: 0;
    background-color: #2e3035;
}

#root{
    /* height: 100vh; */
}

#nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: rgb(23,21,68);
    background: linear-gradient(90deg, rgba(23,21,68,1) 0%, rgba(45,31,93,1) 100%);
    color: white;
    position: fixed;
    width: 100%;
    z-index: 10;
}

#left-nav {
    display: flex;
    align-items: center;
    gap: 50px;
}

#right-nav {
    display:flex;
    align-items: center;
    gap: 40px;
}

#add-post {
    padding: 12px 30px;
    margin-right: 20px;
    background-color: #1bb76e;
    border-radius: 5px;
}

#add-post:hover {
    background-color: #1dc275;
}

a:link, a:visited {
    color: white;
    text-decoration: none;
}

h1 {
    padding-left: 20px;
}

h2 {
    color: white;
}


ul {
    list-style: none;
    display:flex;
    align-items: center;
    gap: 20px;
    padding-right: 20px;
}

#login-background, #signup-background, #newpost-background {
    background-color: #141518;
    height: 100vh;
}

#login-form, #signup-form, #newpost-form {
    background-color: #2c2f34;
}

#login-form input, #signup-form input, #newpost-form input {
    background-color: #191919;
    border: none;
    height: 30px;
    width: 300px;
    border-radius: 5px;
    color: white;
    padding: 0px 10px;
}

#login-form input::placeholder, #signup-form input::placeholder, #newpost-form input::placeholder {
    color: #434343;
}

#login-container, #signup-container, #newpost-container, #postdetail-container {
    padding-top: 90px;
    height: 50vh;
    /* background-color: #2e3035; */
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: white
}

#postdetail-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   gap: 30px;

}

.img-container {
    width: 750px;
    background-color: #27282c;
    display:flex;
    justify-content: center;

}

.img-detail {
    max-width: 750px;
}

#login-form, #signup-form, #newpost-form, #postdetail {
    display:flex;
    flex-direction: column;
    align-items: center;
    padding: 30px;

    border-radius: 5px;   
    /* background-color: #474a51;  */
    color: white;
    box-shadow: 0 8px 6px -6px black;
}

#username-container, #email-container, #password-container, #password1-container, #password2-container,
#title-container, #image-upload-container, #caption-container {
    display:flex;
    gap: 10px;
    padding-bottom: 10px;
}

.login-signup-btn {
    color: white;
    background-color: #5c69ff;
    border: none;
    padding: 10px 30px;
}

.delete-btn {
    color: white;
    background-color: #cb4343;
    border: none;
    padding: 10px 30px;
}

#signup-btn {
    padding: 12px 30px;
    margin-right: 20px;
    background-color: #1bb76e;
    border-radius: 5px;
}

#logout {
    padding-right:20px;
}

#image-container {
    padding-top: 100px;
    background-color: #2e3035;
    display: grid;
    justify-content: center;
    align-items: center;

}

#image-section {            
    column-count: 5;
    column-gap: 15px;
    width: 100%;
    padding-bottom: 15px;
}

.white-background, .image-card {
    color: white;
    width: 300px;
    page-break-inside: avoid;
    margin-bottom: 15px;
}

.image-card {
    background-color: #474a51; 
    box-shadow: 0 8px 6px -6px black;
}

.white-background {
    background-color: white;
}

.homepage-img {
    height: auto;
    width: 300px;
}

.card-text {
    padding: 0px 20px 20px 20px;
}

.image-card:hover {
    opacity: .90;
}

form {
    color: white;
}

.postdetail-form {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.comments {
   width: 750px;
}

.comment-form {
    display:flex;
    flex-direction: column;
}

textarea {
    resize: none;
    height: 100px;
    background-color: #33353b;
    border: 1px solid #4e535e;
    color: white;
    padding: 10px;
    font-size: 15px;
}

textarea::placeholder {
    color: #6e7178;
  }

.comment-btn-container {
    display:flex;
    justify-content: flex-end;
}

.post-comment-btn  {
    background-color: #464b57;
    color: #aaafb9;
    border: none;
    margin: 10px;
    padding: 5px 20px;
    font-weight: bold;
    font-size: 15px;
}



#comment-count {
    border-bottom: 1px solid #b5b7ba;
    color: #b5b7ba;
}



.comment {
    border-bottom: 1px solid #b5b7ba;
    color: #b5b7ba;
    
}

h4 {
    color: #069e5f;
}

